# Criando-Agentes-IA-com-Agnos

./: .gitignore  0.llm_call.py  1.1research.py  1.2analista.py  pyproject.toml
Criando Agentes de IA com Agno 2/Mo╠üdulo 2/: .gitignore
